--- a/src/css/index.css
+++ b/src/css/index.css
@@ -55,7 +55,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  line-height: 24px; /* 150% */
+  line-height: 24px;
   letter-spacing: 0.64px;
   cursor: pointer;
 }
@@ -99,14 +99,14 @@
 
 .gallery__info p {
   font-weight: 600;
-  line-height: 16px; /* 133.333% */
+  line-height: 16px;
   letter-spacing: 0.48px;
   margin: 0px;
 }
 
 .gallery__info span {
   font-weight: 400;
-  line-height: 24px; /* 200% */
+  line-height: 24px;
   letter-spacing: 0.48px;
 }
 
